@@ -2,6 +2,7 @@
 
 * Enhancements:
   * Upgraded Ruby 1.9.3 to patchlevel 484
+  * Upgraded RubyGems to version 1.8.28
   * Update mingwbuilds recipes for both 32 and 64bits (4.7.3 rev1)
 
 * Internal:
